--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<title>Steak House - Free HTML CSS Template</title>
+	<title>대학생활의 설렘, 마이하트시그널</title>
 <!--
 
 Template 2083 Steak House
@@ -51,9 +51,9 @@ http://www.tooplate.com/view/2083-steak-house
       <div class="row">
 
           <div class="col-md-offset-2 col-md-8 col-sm-12">
-              <h1 class="wow fadeInUp" data-wow-delay="0.6s">Steak House</h1>
-              <p class="wow fadeInUp" data-wow-delay="1.0s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-              <a href="#feature" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" data-wow-delay="1.3s">Discover Now</a>
+              <h1 class="wow fadeInUp" data-wow-delay="0.6s">My Heart Signal</h1>
+              <p class="wow fadeInUp" data-wow-delay="1.0s">당신의 성향과 이상형을 분석한 후, 시그널을 보낼 캠퍼스의 인연과 연결해줍니다.</p>
+              <a href="#feature" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" data-wow-delay="1.3s">시그널 보내러가기</a>
           </div>
 
       </div>
@@ -71,17 +71,17 @@ http://www.tooplate.com/view/2083-steak-house
         <span class="icon icon-bar"></span>
         <span class="icon icon-bar"></span>
       </button>
-      <a href="#" class="navbar-brand">Steak House</a>
+      <a href="#" class="navbar-brand">My Heart Signal</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#top" class="smoothScroll">Home</a></li>
         <li><a href="#feature" class="smoothScroll">Features</a></li>
         <li><a href="#about" class="smoothScroll">About</a></li>
-        <li><a href="#menu" class="smoothScroll">Menu</a></li>
-        <li><a href="#team" class="smoothScroll">Team</a></li>
-        <li><a href="#gallery" class="smoothScroll">Gallery</a></li>
-        <li><a href="#contact" class="smoothScroll">Contact</a></li>
+        <li><a href="#menu" class="smoothScroll">You</a></li>
+        <li><a href="#team" class="smoothScroll">Good Match</a></li>
+        <li><a href="#gallery" class="smoothScroll">Your Type</a></li>
+        <li><a href="#contact" class="smoothScroll">Feedback</a></li>
       </ul>
     </div>
 
@@ -97,7 +97,7 @@ http://www.tooplate.com/view/2083-steak-house
       <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
           <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
             <h2>Why Choose Us?</h2>
-            <h4>Steak House HTML CSS Template</h4>
+            <h4>온라인에서 시작되는 대학생활의 설렘, 마이하트시그널</h4>
           </div>
       </div>
 
@@ -108,8 +108,8 @@ http://www.tooplate.com/view/2083-steak-house
           <div class="feature-icon">
              <span><i class="fa fa-cutlery"></i></span>
           </div>
-          <h3>SPECIAL DISH</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+          <h3>TRUST</h3>
+          <p>사용자는 모두 정체를 숨길 수 있는 별명을 사용합니다. 오픈 카카오톡 주소는 자신이 하트시그널을 보낸 상대방에게만 전달됩니다.</p>
         </div>
       </div>
 
@@ -118,8 +118,8 @@ http://www.tooplate.com/view/2083-steak-house
           <div class="feature-icon">
             <span><i class="fa fa-coffee"></i></span>
           </div>
-          <h3>BLACK COFFEE</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+          <h3>RECOMMEND</h3>
+          <p>같은 대학교 내에서만 알고리즘을 통하여 당신과 잘 어울리는 또는 당신의 이상형에 맞는 사람을 맞춤 추천해줍니다.</p>
         </div>
       </div>
 
@@ -128,8 +128,8 @@ http://www.tooplate.com/view/2083-steak-house
           <div class="feature-icon">
             <span><i class="fa fa-bell-o"></i></span>
           </div>
-           <h3>DINNER</h3>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+           <h3>HEART SIGNAL</h3>
+           <p>당신은 상대방의 오픈 카카오톡 주소를 알 수 없기 때문에 당신의 하트 시그널을 받은 상대방의 선택으로 설레는 연락이 시작됩니다.</p>
         </div>
       </div>
 
@@ -146,15 +146,15 @@ http://www.tooplate.com/view/2083-steak-house
       <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
           <div class="wow fadeInUp section-title" data-wow-delay="0.3s">
             <h2>Our Story</h2>
-            <h4>Your Dining Restaurant since 1989</h4>
+            <h4>꿈같은 캠퍼스라이프를 즐기지 못한 국민대학교 새내기를 위해 만들었습니다.</h4>
           </div>
       </div>
 
       <div class="clearfix"></div>
       
       <div class="wow fadeInUp col-md-3 col-sm-5" data-wow-delay="0.3s">
-        <img src="images/about-img.jpg" class="img-responsive" alt="About">
-        <h3>Nunc ullamcorper suscipit neque, ac malesuada purus molestie non.</h3>
+        <img src="images/about-brand.jpg" class="img-responsive" alt="About">
+        <h3>사실, 하트시그널3 보다가 저도 설레고 싶어서 만들었습니다. 여러분도 인연을 찾고 시그널을 주고받아보세요.</h3>
       </div>
 
       <div class="wow fadeInUp col-md-5 col-sm-7" data-wow-delay="0.5s">
