--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ http://www.tooplate.com/view/2083-steak-house
       <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
           <div class="wow fadeInUp section-title" data-wow-delay="0.3s">
             <h2>Our Story</h2>
-            <h4>꿈같은 캠퍼스라이프를 즐기지 못한 국민대학교 새내기를 위해 만들었습니다.</h4>
+            <h4>꿈 같은 캠퍼스라이프를 즐기지 못한 새내기를 위해 만들었습니다.</h4>
           </div>
       </div>
 
@@ -154,7 +154,7 @@ http://www.tooplate.com/view/2083-steak-house
       
       <div class="wow fadeInUp col-md-3 col-sm-5" data-wow-delay="0.3s">
         <img src="images/about-brand.jpg" class="img-responsive" alt="About">
-        <h3>사실, 하트시그널3 보다가 저도 설레고 싶어서 만들었습니다. 여러분도 인연을 찾고 시그널을 주고받아보세요.</h3>
+        <h3>My Heart Signal</h3>
       </div>
 
       <div class="wow fadeInUp col-md-5 col-sm-7" data-wow-delay="0.5s">
@@ -164,30 +164,33 @@ http://www.tooplate.com/view/2083-steak-house
           <ul class="slides">
 
             <li>
-              <img src="images/slide-img1.jpg" alt="Flexslider">
+              <img src="images/slide1.jpg" alt="Flexslider">
             </li>
             <li>
-              <img src="images/slide-img2.jpg" alt="Flexslider">
+              <img src="images/slide2.jpg" alt="Flexslider">
             </li>
             <li>
-              <img src="images/slide-img3.jpg" alt="Flexslider">
+              <img src="images/slide3.jpg" alt="Flexslider">
+            </li>
+            <li>
+              <img src="images/slide4.jpg" alt="Flexslider">
             </li>
 
           </ul>
         </div>
 
-         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt. Lorem ipsum dolor sit amet.</p>
+         <p>대학생이라면 누구든지 참여할 수 있는 설레는 온라인 하트시그널 대학편, 시작은 '국민대학교' 입니다.</p>
       </div>
 
        <div class="wow fadeInUp col-md-4 col-sm-12" data-wow-delay="0.9s">
-        	<h2>Fine Dining</h2>
-         	<p>Steak House is free HTML website template for everyone. Please inform your friends about Tooplate site.</p>
-         	<p>Vestibulum id iaculis nisl. Pellentesque nec tortor sagittis, scelerisque ante at, sollicitudin leo. Vivamus pulvinar a justo vel lobortis.</p>
+        	<h2>How to Use</h2>
+         	<p>시그널을 보낸 사람에게만 당신의 오픈카카오톡주소가 전달됩니다. 상대방의 힌트를 보고 신중히 시그널을 보낸 후, 연락을 기다리세요.</p>
+         	<p>마이하트시그널의 모든 사용자들에게 공개되는 힌트는 다음의 세 가지입니다.</p>
          	
             <ul>
-                <li>Donec fringilla ipsum</li>
-                <li>Integer nec urna</li>
-                <li>Curabitur porta</li>
+                <li>동물 유형, 닉네임</li>
+                <li>대표 사진 세 장, 한 줄 소개</li>
+                <li>관심사, 성향</li>
          	</ul>
       </div>
 
@@ -196,7 +199,7 @@ http://www.tooplate.com/view/2083-steak-house
 </section>
 
 
-<!-- Video section -->
+<!-- Video section
 <section id="video" class="parallax-section">
   <div class="overlay"></div>
     <div class="container">
@@ -210,7 +213,7 @@ http://www.tooplate.com/view/2083-steak-house
 
       </div>
     </div>
-</section>
+</section> -->
 
 <!-- Menu section -->
 <section id="menu" class="parallax-section">
@@ -219,76 +222,54 @@ http://www.tooplate.com/view/2083-steak-house
 
       <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
          <div class="wow fadeInUp section-title" data-wow-delay="0.3s">
-            <h2>Food Menu</h2>
-            <h4>we have special menus</h4>
+            <h2>당신의 성향 : 강아지</h2>
+            <h4>we know about you</h4>
         </div>
       </div>
 
+      <!--character1-->
       <div class="col-md-6 col-sm-12">
         <div class="media wow fadeInUp" data-wow-delay="0.6s">
           <div class="media-object pull-left">
-            <img src="images/gallery-img1.jpg" class="img-responsive" alt="Food Menu">
-            <span class="menu-price">$24</span>
+            <img src="images/user1.jpg" class="img-responsive" alt="Food Menu">
           </div>
           <div class="media-body">
-            <h3 class="media-heading">Breakfast</h3>
+            <h3 class="media-heading">단정한 스타일</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
           </div>
         </div>
 
+        <!--character2-->
         <div class="media wow fadeInUp" data-wow-delay="0.9s">
           <div class="media-object pull-left">
-            <img src="images/gallery-img2.jpg" class="img-responsive" alt="Food Menu">
-            <span class="menu-price">$36</span>
+            <img src="images/user3.jpg" class="img-responsive" alt="Food Menu">\
           </div>
           <div class="media-body">
-            <h3 class="media-heading">New Pizza</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
-          </div>
-        </div>
-
-        <div class="media wow fadeInUp" data-wow-delay="1.2s">
-          <div class="media-object pull-left">
-            <img src="images/gallery-img3.jpg" class="img-responsive" alt="Food Menu">
-            <span class="menu-price">$24</span>
-          </div>
-          <div class="media-body">
-            <h3 class="media-heading">Mushroom</h3>
+            <h3 class="media-heading">함께 노는 것 선호</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
           </div>
         </div>
       </div>
 
+      <!--character3-->
       <div class="col-md-6 col-sm-12">
         <div class="media wow fadeInUp" data-wow-delay="1s">
           <div class="media-object pull-left">
-            <img src="images/gallery-img4.jpg" class="img-responsive" alt="Food Menu">
-            <span class="menu-price">$32</span>
+            <img src="images/user2.jpg" class="img-responsive" alt="Food Menu">
           </div>
           <div class="media-body">
-            <h3 class="media-heading">Seafood</h3>
+            <h3 class="media-heading">차가워보이는 성격</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
           </div>
         </div>
 
+        <!--character4-->
         <div class="media wow fadeInUp" data-wow-delay="1.3s">
           <div class="media-object pull-left">
-            <img src="images/gallery-img5.jpg" class="img-responsive" alt="Food Menu">
-            <span class="menu-price">$64</span>
+            <img src="images/user4.jpg" class="img-responsive" alt="Food Menu">
           </div>
           <div class="media-body">
-            <h3 class="media-heading">Spicy Beef</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
-          </div>
-        </div>
-
-        <div class="media wow fadeInUp" data-wow-delay="1.6s">
-          <div class="media-object pull-left">
-            <img src="images/gallery-img6.jpg" class="img-responsive" alt="Food Menu">
-            <span class="menu-price">$45</span>
-          </div>
-          <div class="media-body">
-            <h3 class="media-heading">Dinner</h3>
+            <h3 class="media-heading">당신을 표현하는 강아지</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
           </div>
         </div>
@@ -305,8 +286,8 @@ http://www.tooplate.com/view/2083-steak-house
 
       <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
          <div class="wow fadeInUp section-title" data-wow-delay="0.3s">
-            <h2>Meet Our Chefs</h2>
-            <h4>we are food specialists</h4>
+            <h2>Good Match</h2>
+            <h4>당신과 잘 어울리는 사람들</h4>
         </div>
       </div>
 
