--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@ http://www.tooplate.com/view/2083-steak-house
 
       <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
           <div class="team-thumb">
-            <img src="images/chef1.jpg" class="img-responsive" alt="Team">  
+            <img src="images/woman1.jpg" class="img-responsive" alt="Team">  
                 <div class="team-des">
                   <h3>Sandar</h3>
-                  <h4>Kitchen Manager</h4>
+                  <h4>강아지 유형</h4>
                     <ul class="social-icon">
                       <li><a href="#" class="fa fa-facebook"></a></li>
                       <li><a href="#" class="fa fa-twitter"></a></li>
@@ -310,10 +310,10 @@ http://www.tooplate.com/view/2083-steak-house
 
       <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
           <div class="team-thumb">
-            <img src="images/chef2.jpg" class="img-responsive" alt="Team">  
+            <img src="images/woman2.jpg" class="img-responsive" alt="Team">  
               <div class="team-des">
                 <h3>Candy</h3>
-                <h4>Co-Founder</h4>
+                <h4>곰 유형</h4>
                   <ul class="social-icon">
                       <li><a href="#" class="fa fa-twitter"></a></li>
                   </ul>
@@ -323,10 +323,10 @@ http://www.tooplate.com/view/2083-steak-house
 
       <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.9s">
           <div class="team-thumb">
-            <img src="images/chef3.jpg" class="img-responsive" alt="Team">  
+            <img src="images/woman3.jpg" class="img-responsive" alt="Team">  
               <div class="team-des">
                 <h3>Mama</h3>
-                <h4>Senior Chef</h4>
+                <h4>돌고래 유형</h4>
                   <ul class="social-icon">
                       <li><a href="#" class="fa fa-facebook"></a></li>
                       <li><a href="#" class="fa fa-twitter"></a></li>
@@ -338,23 +338,12 @@ http://www.tooplate.com/view/2083-steak-house
       <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="1.1s">
           <div class="join-team">
             <i class="fa fa-plus"></i>
-            <p>Fusce interdum libero id libero volutpat varius convallis at sem.</p>
+            <p>당신의 캠퍼스에서 당신과 잘 어울리는 다양한 성향의 사람들을 기대할 수 있습니다.</p>
             <a href="#" class="btn btn-default hvr-bounce-to-bottom">JOIN US</a>
           </div>
       </div>
 
       <div class="clearfix"></div>
-
-      <div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.3s">
-        <h2>Our Taste</h2>
-         <p>Fusce lobortis quis nisl nec facilisis. Donec fringilla ipsum arcu, quis maximus est molestie eget. Nunc ullamcorper suscipit neque, ac malesuada purus molestie non. Phasellus sollicitudin urna sed ultrices dictum.</p>
-      </div>
-
-      <div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.6s">
-        <h2>Our Service</h2>
-         <p>Maecenas dictum cursus dui, quis mattis eros ultricies sed. Maecenas ligula nulla, dictum eu cursus id, semper in orci. Fusce vel nisi hendrerit justo viverra vehicula in nec nunc. Curabitur blandit fringilla quam.</p>
-      </div>
-
     </div>
   </div>
 </section>
