--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ http://www.tooplate.com/view/2083-steak-house
           <div class="col-md-offset-2 col-md-8 col-sm-12">
               <h1 class="wow fadeInUp" data-wow-delay="0.6s">My Heart Signal</h1>
               <p class="wow fadeInUp" data-wow-delay="1.0s">당신의 성향과 이상형을 분석한 후, 시그널을 보낼 캠퍼스의 인연과 연결해줍니다.</p>
-              <a href="#feature" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" data-wow-delay="1.3s">시그널 보내러가기</a>
+              <a href="#team" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" data-wow-delay="1.3s">시그널 보내러가기</a>
           </div>
 
       </div>
@@ -106,30 +106,30 @@ http://www.tooplate.com/view/2083-steak-house
       <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
         <div class="feature-thumb">
           <div class="feature-icon">
-             <span><i class="fa fa-cutlery"></i></span>
+             <span><i class="fa fa-heart"></i></span>
           </div>
-          <h3>TRUST</h3>
-          <p>사용자는 모두 정체를 숨길 수 있는 별명을 사용합니다. 오픈 카카오톡 주소는 자신이 하트시그널을 보낸 상대방에게만 전달됩니다.</p>
+          <h3>HEART SIGNAL</h3>
+          <p>상대방을 표현하는 힌트들을 보고 하트시그널을 보낼 수 있습니다.</p>
         </div>
       </div>
 
       <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
         <div class="feature-thumb">
           <div class="feature-icon">
-            <span><i class="fa fa-coffee"></i></span>
+            <span><i class="fa fa-dot-circle-o"></i></span>
           </div>
-          <h3>RECOMMEND</h3>
-          <p>같은 대학교 내에서만 알고리즘을 통하여 당신과 잘 어울리는 또는 당신의 이상형에 맞는 사람을 맞춤 추천해줍니다.</p>
+          <h3>TARGET</h3>
+          <p>연결성이 있는 같은 캠퍼스의 대학생들을 대상으로 합니다.</p>
         </div>
       </div>
 
       <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.9s">
         <div class="feature-thumb">
           <div class="feature-icon">
-            <span><i class="fa fa-bell-o"></i></span>
+            <span><i class="fa fa-photo"></i></span>
           </div>
            <h3>HEART SIGNAL</h3>
-           <p>당신은 상대방의 오픈 카카오톡 주소를 알 수 없기 때문에 당신의 하트 시그널을 받은 상대방의 선택으로 설레는 연락이 시작됩니다.</p>
+           <p>자신을 표현하는 다섯 장의 사진을 업로드 할 수 있습니다.</p>
         </div>
       </div>
 
