--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@ http://www.tooplate.com/view/2083-steak-house
          	<p>마이하트시그널의 모든 사용자들에게 공개되는 힌트는 다음의 세 가지입니다.</p>
          	
             <ul>
-                <li>동물 유형, 닉네임</li>
-                <li>대표 사진 세 장, 한 줄 소개</li>
-                <li>관심사, 성향</li>
+                <li>동물 유형, 아이디</li>
+                <li>대표 사진 세 장, 소개 글</li>
+                <li>#관심사, 성향</li>
          	</ul>
       </div>
 
