--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ http://www.tooplate.com/view/2083-steak-house
           <div class="feature-icon">
             <span><i class="fa fa-photo"></i></span>
           </div>
-           <h3>HEART SIGNAL</h3>
+           <h3>HINT</h3>
            <p>자신을 표현하는 다섯 장의 사진을 업로드 할 수 있습니다.</p>
         </div>
       </div>
