수정: Features 텍스트

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ http://www.tooplate.com/view/2083-steak-house
              <span><i class="fa fa-heart"></i></span>
           </div>
           <h3>HEART SIGNAL</h3>
-          <p>상대방을 표현하는 힌트들을 보고 하트시그널을 보낼 수 있습니다.</p>
+          <p>상대방을 표현하는 힌트들을 보고 시그널을 보낼 수 있습니다.</p>
         </div>
       </div>
 
