수정: About 텍스트

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ http://www.tooplate.com/view/2083-steak-house
           </ul>
         </div>
 
-         <p>대학생이라면 누구든지 참여할 수 있는 설레는 온라인 하트시그널 대학편, 시작은 '국민대학교' 입니다.</p>
+         <p>소속 대학생이라면 누구든지 참여할 수 있는 설레는 온라인 하트시그널 대학편, 시작은 '국민대학교' 입니다.</p>
       </div>
 
        <div class="wow fadeInUp col-md-4 col-sm-12" data-wow-delay="0.9s">
