수정: You 서브 텍스트 내용 추가

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ http://www.tooplate.com/view/2083-steak-house
           </div>
           <div class="media-body">
             <h3 class="media-heading">단정한 스타일</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
+            <p>슈트가 잘어울리는 단정한 스타일이시군요. 당신은 외출 시 단정한 옷을 즐겨입네요.</p>
           </div>
         </div>
 
@@ -246,7 +246,7 @@ http://www.tooplate.com/view/2083-steak-house
           </div>
           <div class="media-body">
             <h3 class="media-heading">함께 노는 것 선호</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
+            <p>누군가와 함께 있을 때 행복감을 느낍니다. 마음 속 깊이 애인과 많은 시간을 같이 보내고 싶어하는군요.</p>
           </div>
         </div>
       </div>
@@ -259,7 +259,7 @@ http://www.tooplate.com/view/2083-steak-house
           </div>
           <div class="media-body">
             <h3 class="media-heading">차가워보이는 성격</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
+            <p>주위 사람들의 말에서 혹은 자신의 생각에서 스스로를 차갑다고 생각합니다. 하지만 숨겨진 따뜻한 모습도 있답니다.</p>
           </div>
         </div>
 
@@ -270,7 +270,7 @@ http://www.tooplate.com/view/2083-steak-house
           </div>
           <div class="media-body">
             <h3 class="media-heading">당신을 표현하는 강아지</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
+            <p>성향테스트를 통한 결과에 따르면 당신은 멍뭉미 넘치는 강아지입니다. 정이 많고, 알게 모르게 애인에게 사랑받기 위해 노력하는 사람입니다.</p>
           </div>
         </div>
       </div>
