--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 
-	<title>대학생활의 설렘, 마이하트시그널</title>
+  <title>대학연애의 설렘, 마이하트시그널</title>
+  <link rel="shortcut icon" type="image/x-icon" href="images/titleIcon.jpg">
 <!--
 
 Template 2083 Steak House
@@ -97,7 +98,7 @@ http://www.tooplate.com/view/2083-steak-house
       <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
           <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
             <h2>Why Choose Us?</h2>
-            <h4>온라인에서 시작되는 대학생활의 설렘, 마이하트시그널</h4>
+            <h4>온라인에서 시작되는 캠퍼스의 설렘, 마이하트시그널</h4>
           </div>
       </div>
 
@@ -300,9 +301,8 @@ http://www.tooplate.com/view/2083-steak-house
                   <h3>Apple__99</h3>
                   <h4>강아지 유형</h4>
                     <ul class="social-icon">
-                      <li><a href="#" class="fa fa-facebook"></a></li>
-                      <li><a href="#" class="fa fa-twitter"></a></li>
-                      <li><a href="#" class="fa fa-dribbble"></a></li>
+                      <li><a href="#" class="fa fa-envelope-o"></a></li>
+                      <li><a href="#" class="fa fa-mail-forward"></a></li>
                     </ul>
                 </div>
           </div>
@@ -315,7 +315,8 @@ http://www.tooplate.com/view/2083-steak-house
                 <h3>Lee_gone_</h3>
                 <h4>곰 유형</h4>
                   <ul class="social-icon">
-                      <li><a href="#" class="fa fa-twitter"></a></li>
+                    <li><a href="#" class="fa fa-envelope-o"></a></li>
+                    <li><a href="#" class="fa fa-mail-forward"></a></li>
                   </ul>
               </div>
           </div>
@@ -328,8 +329,8 @@ http://www.tooplate.com/view/2083-steak-house
                 <h3>honey_kim21</h3>
                 <h4>돌고래 유형</h4>
                   <ul class="social-icon">
-                      <li><a href="#" class="fa fa-facebook"></a></li>
-                      <li><a href="#" class="fa fa-twitter"></a></li>
+                    <li><a href="#" class="fa fa-envelope-o"></a></li>
+                    <li><a href="#" class="fa fa-mail-forward"></a></li>
                   </ul>
               </div>
           </div>
@@ -502,21 +503,21 @@ http://www.tooplate.com/view/2083-steak-house
 	<div class="container">
 		<div class="row">
 
-              <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.3s">
+              <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.0s">
                 <h3>About MyHeartSignal</h3>
                 <p>My Heart Signal is being developed for Freshman in Korea. I want you to have a happy college life online that you 
                   can't do because of COVID-19
                 </p>
               </div>  
         
-              <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.6s">
+              <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.3s">
                 <h3>Contact Detail</h3>
                 <p>Seoul, Jeongneung-dong, 37.610104, 126.997111</p>
                 <p>010-3353-1574</p>
                 <p>rlfgus8708@gmail.com</p>
               </div> 
         
-              <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.9s">
+              <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.6s">
                 <h3>Customer University</h3>
                 <strong>Kookmin University</strong>
                 <p>User 1,300+</p>
