추가: 로그인 버튼 및 새로고침 버튼

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>대학연애의 설렘, 마이하트시그널</title>
-  <link rel="shortcut icon" type="image/x-icon" href="images/titleIcon.jpg">
+  <link rel="shortcut icon" type="image/x-icon" href="images/logo.jpg">
 <!--
 
 Template 2083 Steak House
@@ -49,16 +49,7 @@ http://www.tooplate.com/view/2083-steak-house
   <div class="gradient-overlay"></div>
     <div class="container">
       <div class="row">
-          <style >
-            .relative{
-              position: absolute;
-              top: 0px;
-              right: 30px
-            }
-          </style>
-          <div class="relative">
-              <a class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" >Sign up</a>
-          </div>
+          <a href="#feature" class="wow fadeInUp small-btn btn-default hvr-bounce-to-top smoothScroll" >로그인</a>
           <div class="col-md-offset-2 col-md-8 col-sm-12">
               <h1 class="wow fadeInUp" data-wow-delay="0.6s">My Heart Signal</h1>
               <p class="wow fadeInUp" data-wow-delay="1.0s">당신의 성향과 이상형을 분석한 후, 시그널을 보낼 캠퍼스의 인연과 연결해줍니다.</p>
@@ -346,9 +337,9 @@ http://www.tooplate.com/view/2083-steak-house
 
       <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="1.1s">
           <div class="join-team">
-            <i class="fa fa-plus"></i>
-            <p>당신의 캠퍼스에서 당신과 잘 어울리는 다양한 성향의 사람들을 기대할 수 있습니다.</p>
-            <a href="#" class="btn btn-default hvr-bounce-to-bottom">JOIN US</a>
+            <i class="fa fa-refresh"></i>
+            <p>당신은 캠퍼스에서 당신과 더 잘 어울리는 다양한 성향의 사람들을 기대할 수 있습니다.</p>
+            <a href="#team" class="btn btn-default hvr-bounce-to-bottom">새로고침</a>
           </div>
       </div>
 
@@ -380,6 +371,11 @@ http://www.tooplate.com/view/2083-steak-house
                         <li><a href="#" class="opc-main-bg" data-filter=".pizza">장난끼많은</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".lunch">세심한</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".dinner">하얀</a></li>
+                        <li><a href="#" class="opc-main-bg" data-filter=".breakfast" >
+                          <div class="refreshObject">
+                            새로고침
+                          </div>
+                        </li>
                     </ul>
 
                     <!-- iso box section -->
